[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/gui/speedometerBG.png" type="Texture" id=1]
[ext_resource path="res://textures/gui/lifebar.png" type="Texture" id=2]
[ext_resource path="res://textures/gui/boostbarBG.png" type="Texture" id=3]
[ext_resource path="res://textures/gui/lifebarBG.png" type="Texture" id=4]
[ext_resource path="res://textures/gui/speedometer.png" type="Texture" id=5]
[ext_resource path="res://textures/gui/boostbar.png" type="Texture" id=6]
[ext_resource path="res://guiElements/HUD.gd" type="Script" id=7]
[ext_resource path="res://fonts/connection_ii/ConnectionII.tres" type="DynamicFont" id=8]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
margin_right = 416.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftSide" type="Control" parent="Control"]
margin_right = 140.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoostBarBG" type="TextureRect" parent="Control/LeftSide"]
margin_left = 11.0
margin_top = 220.0
margin_right = 108.0
margin_bottom = 260.0
texture = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoostMeter" type="TextureProgress" parent="Control/LeftSide"]
margin_left = 17.0
margin_top = 222.0
margin_right = 65.0
margin_bottom = 230.0
value = 70.0
rounded = true
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthMeter" type="Sprite" parent="Control/LeftSide"]
visible = false
position = Vector2( 31, 216 )
texture = ExtResource( 2 )
vframes = 6
frame = 3

[node name="LifeBarBG" type="TextureRect" parent="Control/LeftSide"]
visible = false
margin_left = 3.0
margin_top = 210.0
margin_right = 86.0
margin_bottom = 250.0
texture = ExtResource( 4 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="Control/LeftSide"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "FPS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="velocity" type="Label" parent="Control/LeftSide"]
margin_top = 19.0
margin_right = 40.0
margin_bottom = 39.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "V:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="velocity2" type="Label" parent="Control/LeftSide"]
margin_top = 29.0
margin_right = 40.0
margin_bottom = 49.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "V:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="velocity3" type="Label" parent="Control/LeftSide"]
margin_top = 39.0
margin_right = 40.0
margin_bottom = 59.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "V:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rot" type="Label" parent="Control/LeftSide"]
margin_top = 57.0
margin_right = 40.0
margin_bottom = 77.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "V:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rot2" type="Label" parent="Control/LeftSide"]
margin_top = 67.0
margin_right = 40.0
margin_bottom = 87.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "V:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rot3" type="Label" parent="Control/LeftSide"]
margin_top = 77.0
margin_right = 40.0
margin_bottom = 97.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "V:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightSide" type="Control" parent="Control"]
margin_left = 426.0
margin_right = 451.0
margin_bottom = 241.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedometerBG" type="TextureRect" parent="Control/RightSide"]
margin_left = -124.0
margin_top = 214.0
margin_right = -3.0
margin_bottom = 254.0
texture = ExtResource( 1 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speedometer" type="TextureProgress" parent="Control/RightSide"]
margin_left = -118.0
margin_top = 216.0
margin_right = -6.0
margin_bottom = 232.0
value = 70.0
rounded = true
texture_progress = ExtResource( 5 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="removeThisToBreakTheSceneIDKwhy" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
